// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WizardController with multiple children matches snapshot with two children 1`] = `
<div
  className="wizard-controller"
>
  <div
    className="progress-header"
  >
    <h3
      className="wizard-step-title"
    >
      wizard step 1
    </h3>
    <WizardProgressBar
      currentStepIndex={0}
      handleJump={[Function]}
      steps={
        Array [
          Object {
            "stepStatus": "circle-thick",
            "title": "wizard step 1",
          },
          Object {
            "stepStatus": "circle-thick",
            "title": "wizard step 2",
          },
        ]
      }
    />
  </div>
  <WizardStep
    decrement={null}
    increment={[Function]}
    isBlockingStep={false}
    isComplete={[Function]}
    isErrored={false}
    lastStep={false}
    title="wizard step 1"
  >
    step child 1
  </WizardStep>
</div>
`;

exports[`WizardController with multiple children with first step complete matches snapshot with first step complete 1`] = `
<div
  className="wizard-controller"
>
  <div
    className="progress-header"
  >
    <h3
      className="wizard-step-title"
    >
      wizard step 2
    </h3>
    <WizardProgressBar
      currentStepIndex={1}
      handleJump={[Function]}
      steps={
        Array [
          Object {
            "stepStatus": "checkmark",
            "title": "complete wizard step 1",
          },
          Object {
            "stepStatus": "circle-thick",
            "title": "wizard step 2",
          },
        ]
      }
    />
  </div>
  <WizardStep
    decrement={[Function]}
    isBlockingStep={false}
    isComplete={[Function]}
    isErrored={false}
    lastStep={true}
    title="wizard step 2"
  >
    step child 2
  </WizardStep>
</div>
`;

exports[`WizardController with one child matches snapshot with one child 1`] = `
<div
  className="wizard-controller"
>
  <div
    className="progress-header"
  >
    <h3
      className="wizard-step-title"
    >
      only wizard step
    </h3>
    <WizardProgressBar
      currentStepIndex={0}
      handleJump={[Function]}
      steps={
        Array [
          Object {
            "stepStatus": "circle-thick",
            "title": "only wizard step",
          },
        ]
      }
    />
  </div>
  <WizardStep
    decrement={null}
    isBlockingStep={false}
    isComplete={[Function]}
    isErrored={false}
    lastStep={true}
    title="only wizard step"
  >
    only step child
  </WizardStep>
</div>
`;
